docs: add subscription api swagger routes
